--- a/my-app/tsconfig.json
+++ b/my-app/tsconfig.json
@@ -2,10 +2,17 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "baseUrl": "src",
     "paths": {
-      "@/*": [
-        "./*"
-      ]
+      "entities": ["entities/*"],
+      "shared": ["shared/*"],
+      "features": ["features/*"],
+      "widgets": ["widgets/*"],
+      "screens": ["screens/*"],
+      "processes": ["processes/*"],
+      //      "@/*": [
+      //        "./*", "./src/*"
+      //      ],
     }
   },
   "include": [
