--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.0.2",
+    "axios": "^1.6.8",
     "clsx": "^2.1.0",
     "expo": "~50.0.14",
     "expo-font": "~11.10.3",
@@ -30,11 +31,13 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.3",
     "react-native": "0.73.6",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-tailwindcss": "^1.1.11",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-query": "^3.39.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
