--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,8 +13,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@everapi/currencyapi-js": "^1.0.6",
     "@expo/vector-icons": "^14.0.0",
     "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-picker/picker": "2.6.1",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.6.8",
     "clsx": "^2.1.0",
@@ -32,6 +34,7 @@
     "react-hook-form": "^7.51.3",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
+    "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
