--- a/my-app/package.json
+++ b/my-app/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "@everapi/currencyapi-js": "^1.0.6",
     "@expo/vector-icons": "^14.0.0",
+    "@gluestack-ui/config": "^1.1.18",
+    "@gluestack-ui/themed-native-base": "^0.1.107-alpha2",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-picker/picker": "2.6.1",
     "@react-navigation/native": "^6.0.2",
@@ -23,21 +25,26 @@
     "expo": "~50.0.14",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
+    "expo-localization": "~14.8.4",
     "expo-router": "~3.4.8",
     "expo-splash-screen": "~0.26.4",
     "expo-status-bar": "~1.11.1",
     "expo-system-ui": "~2.9.3",
     "expo-web-browser": "~12.8.2",
+    "i18next": "^23.11.2",
     "nativewind": "^2.0.11",
+    "querystringify": "^2.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-i18next": "^14.1.1",
     "react-native": "0.73.6",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-multiple-select": "^0.5.12",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "13.4.0",
     "react-native-tailwindcss": "^1.1.11",
     "react-native-web": "~0.19.6",
     "react-query": "^3.39.3"
